kubernetes/apps/monitoring/homepage/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
  ports:
    - name: http
      port: 80
      targetPort: 3000
