kubernetes/apps/monitoring/homepage/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.k8s.io/audience: internal
spec:
  hostnames:
    - homepage.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
